# bazel-js-repo

./: .bazelignore  .gitignore  README.md  bazel-bazel-js-repro  bazel-bin  bazel-out  bazel-testlogs  package.json
libs/a/: BUILD.bazel  package.json
libs/b/: BUILD.bazel  index.ts  package.json  tsconfig.json
libs/c/: BUILD.bazel  index.ts  package.json
